# cocel_motor_driver

./: CMakeLists.txt  README.md  package.xml
config/: cocel_driver_params.yaml
include/motor_driver/: MotorDriver.hpp
launch/: cocel_driver.launch.py
msg/: CocelDriverCmd.msg  MotorDriverCmd.msg
src/: CANInterface.cpp  CANInterfaceTest.cpp  MotorDriver.cpp  cocel_driver_node.cpp  cocel_driver_tester.cpp
